sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: ':' expected but ')' found.
def bubbleSort(L)  {
                ^AlgBubbleSort1:24: error: identifier expected but '}' found.
}
^