sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var temp:Int=0
def bubbleSort(L)  {
  for (i<-1 to length(l)) {
    var triee=true
    for (j<-1 to length(l)-1){
      
      if (L[j-1]>L[j]){
        temp = L[j-1]
        L[j-1]=L[j]
        L[j]=temp
        triee=false
      }
      
     	if (triee) {
       return 0
      }
    }
          
  }
}